<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lnToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="10dp"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_back_g" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="60dp"
            android:layout_toRightOf="@+id/btnClose"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_back_g"
            android:text="@string/common_login"
            android:textColor="@color/xanh_da_troi"

            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lnToolbar"
        android:background="@color/line_color">

    </View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_emailornickname"
                    android:inputType="text"
                    android:textColor="@color/xanhden" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_password"
                    android:inputType="textPassword"
                    android:textColor="@color/xanhden" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_login_button"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/common_login"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/common_forgot_password"
                    android:textColor="@color/xanhxam"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hoặc đăng nhập bằng"/>

            <include layout="@layout/include_login_with_social"></include>



            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/common_not_yet_account"
                android:textColor="@color/xanhxam"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Tạo tài khoản ngay"
                android:textColor="@color/xanhduongdam"
                android:textSize="14sp" />


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/img_login1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>