<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lnToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="10dp"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_back_g" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/btnClose"
            android:gravity="center"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_back_g"
            android:text="@string/common_forgot_password"
            android:textColor="@color/xanh_da_troi"
            android:textSize="16sp"

            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lnToolbar"
        android:background="@color/line_color">

    </View>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView3"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/common_input_email_to_send_password"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/xanhden" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/btnForgotPassword"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_login_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/common_send"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
