<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/xanhduong">

    <RelativeLayout
        android:id="@+id/viewTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/xanhduongdam">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_back_w"
            android:id="@+id/btnFinish"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:text="CẬP NHẬT DANH BẠ"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/xam"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/viewTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="1"
            android:background="@color/blue_main"
            android:id="@+id/btnUpdateByFirstNumber"
            android:gravity="center">
            <TextView
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/update_by_first_number"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="1"
            android:background="@color/xanhgreen"
            android:id="@+id/btnUpdateSimple"
            android:gravity="center">
            <TextView
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/update_by_simple"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="1"
            android:background="@color/accent"
            android:id="@+id/btnUpdateAll"
            android:gravity="center">
            <TextView
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/update_all"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:id="@+id/btnTraining"
            android:gravity="center">
            <TextView
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/training"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
